# OptSim

./: LICENSE  README.md  TODO.md  pyproject.toml
Projects/Project 1/reports/Final report/: elsarticle.dtx  main.aux  main.out  main.tex
Projects/Project 1/reports/First results/: first_results.aux  first_results.fdb_latexmk  first_results.fls  first_results.tex
examples/: fundamental_of_photonics_saleh_cap7.ipynb
files/: projeto1.xopp  test.py
files/relatorios/: projeto1_ideias.aux  projeto1_ideias.fdb_latexmk  projeto1_ideias.synctex(busy)  projeto1_ideias.tex
files/reports/: first_results.aux  first_results.fdb_latexmk  first_results.fls  first_results.tex
files/simulations/python/: fundamental_of_photonics_saleh_cap7.ipynb
projects/project1/Derivations/: Coupling_constants.aux  Coupling_constants.bib  Coupling_constants.blg  Coupling_constants.run.xml  Coupling_constants.tex
projects/project1/reports/final_report/: bibliography.bib  eduardo.aux  eduardo.fdb_latexmk  eduardo.fls  eduardo.tex  f.py  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
projects/project1/reports/first_results/: first_results.aux  first_results.fdb_latexmk  first_results.fls  first_results.tex
projects/project1/reports/intermediate_results/: intermediate_results.aux  intermediate_results.fdb_latexmk  intermediate_results.fls  (+1 more)
projects/project2/COMSOL/: Photonic_crystal.mph
relatorios/: projeto1_ideias.aux  projeto1_ideias.fdb_latexmk  projeto1_ideias.fls  projeto1_ideias.tex
src/optsim/: guides.py  rectguides.py  slabguides.py  testing.ipynb
(+6 files in other folders)
