[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "optsim"
version = "0.0.1"
authors = [
  { name="Eduardo A. V. Souza", email="eduardo.aug.vs653@gmail.com" },
  { name="Ivan Prearo", email="ivprearo@gmail.com" }
]
description = "Python package for simulations of optical wave guides and other similar systems"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/IPrearo/OptSim"
Issues = "https://github.com/IPrearo/OptSim/issues"